style.css
/* COLOURS */
:root {
    --lighter: rgba(255, 255, 255, 0.1);
    --darker: rgba(0, 0, 0, 0.2);
    --secondary: #8A8A8E;

    text-size-adjust: none;
    -webkit-text-size-adjust: none;
}
@media(prefers-color-scheme: light) {
    :root {
        --primary: black;
        --background: white;
        --plain-background: white;
    }
}
@media(prefers-color-scheme: dark) {
    :root {
        --primary: white;
        --background: black;
        --plain-background: var(--lighter);
    }
}

/* GENERAL */
:root {
    --navbar_height: 100px;
    --nav_button_height: 60px;
    --nav_buttons_count: 6;
    --narrow_width: 800px;
    --regular_width: 1200px;
    --animation_duration: 0.35s;

    background-color: black;
    scroll-behavior: smooth;
    text-align: center;
}
* {
    font-family: Raleway;
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}
ul {
    text-align: left;
    padding-left: 20px;
}
p, li {
    line-height: 1.75rem;
}

/* BACKGROUND IMAGES */
#intro {
    background-image: url(images/general/summer_ball1.jpg);
}
#acting {
    background-image: url(images/general/summer_ball4.jpg);
}
#tech {
    background-image: url(images/general/summer_ball2.jpg);
}
#mailing_lists {
    background-image: url(images/general/summer_ball3.jpg);
}
#uch {
    background-image: url(images/general/uch2.jpeg);
}

/* CONTENT */
.section {
    display: flex;
    justify-content: center;
    align-items: center;
    scroll-margin-top: var(--navbar_height);
    padding: 100px 20px;
}
.background_section {
    background-color: rgba(0, 0, 0, 0.5);
    background-blend-mode: multiply;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    color: white;
}
.plain_section {
    color: var(--primary);
    background-color: var(--plain-background)
}
.section_content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
}
.narrow_content {
    max-width: var(--narrow_width);
}
.regular_content {
    max-width: var(--regular_width);
}
.content_grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 50px;
}
.content_row {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 20px;
}
.content_item {
    flex: 1;
    min-width: 300px;
    max-width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}
.content_column {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 20px;
}

/* IMAGES */
.invert {
    filter: invert();
}
.icon {
    width: 20px;
    height: 20px;
    filter: invert();
}
.small_logo {
    height: 70px;
}

/* BUTTONS */
button, a {
    /* Remove default browser appearance */
    font-size: 1rem;
    border: none;
    background: none;
    text-decoration: none;
    color: inherit;
    transition: opacity var(--animation_duration);
}
@media(hover: hover) {
    button:hover, a:hover {
        opacity: 0.75;
    }
}
.large_button {
    font-size: 1.2rem;
    padding: 10px 20px;
    border-radius: 100px;
    display: flex;
    gap: 15px;
    align-items: center;
    background-color: var(--primary);
    color: var(--background);
}
.background_section .large_button {
    background-color: white;
    color: black;
}
.background_section .icon {
    filter: none;
}
@media(prefers-color-scheme: dark) {
    .icon {
        filter: none;
    }
}

/* NAVIGATION */
#nav {
    position: fixed;
    width: 100%;
    height: var(--navbar_height);
    background-color: black;
    z-index: 2;
    display: flex;
    justify-content: center;
}
#navbar {
    width: 100%;
    height: var(--navbar_height);
    background-color: black;
    z-index: 2;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#nav_links {
    position: absolute;
    background-color: black;
    gap: 0px;
}
#nav_links.transition {
    transition: all var(--animation_duration);
}
#nav_menu_img {
    width: 30px;
    height: 30px;
}
.nav_button {
    color: white;
    padding: 0 20px;
    height: var(--nav_button_height);
    line-height: var(--nav_button_height);
}
@media(min-width: 1000px) {
    #nav_links {
        z-index: 2;
        flex-direction: row;
        top: calc((var(--navbar_height) - var(--nav_button_height))/2);
    }
    #nav_menu {
        display: none;
    }
}
@media(max-width: 1000px) {
    #nav_links {
        z-index: 0;
        width: 100%;
        flex-direction: column;
        top: calc(var(--navbar_height) - var(--nav_buttons_count) * var(--nav_button_height));
    }
    #nav_links.selected {
        top: var(--navbar_height);
    }
    #nav_menu {
        display: block;
    }
}

/* PLAYER */
#intro {
    position: relative;
    width: 100%;
    max-height: 100vh;
    aspect-ratio: 16/9;
    padding-top: var(--navbar_height);
    display: flex;
    justify-content: center;
    align-items: center;
}
#player {
    width: 100%;
    height: 100%;
    display: block;
    z-index: 1;
    opacity: 0;
    transition: opacity 1s;
    pointer-events: none;
}
#dramsoc {
    position: absolute;
}
#dramsoc_logo {
    width: min(30vh, 30vw);
    height: min(30vh, 30vw);
    margin-bottom: 20px;
}
#dramsoc_title {
    font-size: 1.75rem;
}
#down_button {
    position: absolute;
    bottom: 0px;
    transition: opacity var(--animation_duration);
    z-index: 1;
}
/* Hide down button if you can already see the rest of the page */
@media(max-aspect-ratio: 16/10) {
    #down_button {
        opacity: 0;
    }
}
#down_button_img {
    width: calc(20px + 3vh);
    height: calc(20px + 3vh);
    margin: 50px;
    margin-bottom: 0;
}

/* SHOWS */
#past_shows {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    gap: 20px;
    padding: 20px 0px;
}
.show {
    background-color: var(--plain-background);
    box-shadow: 0px 5px 10px var(--darker);
    max-width: 500px;
    flex: 1 1 400px;
    border-radius: 15px;
    overflow: hidden;
}
.show_img {
    width: 100%;
    aspect-ratio: 16/9;
    object-fit: cover;
}
.show_title {
    padding: 15px 10px;
}
@media(prefers-color-scheme: dark) {
    .show {
        box-shadow: none;
    }
}

/* COMMITTEE */
.headshot {
    width: 250px;
    height: 250px;
    border-radius: 50%;
}
.committee_role {
    color: var(--secondary);
    font-size: 1.2rem;
    text-transform: uppercase;
}

/* CONTACT */
.contact_option {
    flex-wrap: nowrap;
    text-align: left;
}

/* FOOTER */
#footer {
    background-color: black;
    color: white;
    padding: 50px 20px;
}
#footer_grid {
    align-items: start;
    justify-content: start;
}
#imperial_logo {
    height: 40px;
}
#union_logo {
    height: 50px;
}
#comus_logo {
    height: 50px;
}
#address {
    text-align: left;
}
#copyright {
    color: var(--secondary);
}

